Fix vertical alignment of "to" separators

--- a/app/styles/_summary.scss
+++ b/app/styles/_summary.scss
@@ -2,7 +2,8 @@
   flex-grow: 1;
   padding: 0 20px;
 }
-.log-label {
+.log-label,
+.log-separator {
   display: inline-block;
   vertical-align: middle;
 }
